crates/air_r_parser/tests/snapshots/error/call/side_by_side_arguments.R
# Can't have two arguments side by side without a delimiter
fn(a b)
